--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.21.1",
     "msw": "^0.26.2",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
@@ -21,6 +22,9 @@
     "typescript": "^4.2.2",
     "use-react-router": "^1.0.7",
     "web-vitals": "^1.1.0"
+  },
+  "devDependencies": {
+    "@types/axios": "^0.14.0"
   },
   "scripts": {
     "start": "react-scripts start",
