--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-loader-spinner": "^3.1.3",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
+    "immer": "^8.0.1",
     "msw": "^0.26.2",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
@@ -21,7 +22,7 @@
     "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "typescript": "^4.2.2",
+    "typescript": "^4.2.3",
     "use-react-router": "^1.0.7",
     "web-vitals": "^1.1.0"
   },
