--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-loader-spinner": "^4.0.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.2.3",
     "use-react-router": "^1.0.7",
     "web-vitals": "^1.1.0"
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0"
+    "@types/axios": "^0.14.0",
+    "@types/react-redux": "^7.1.16"
   },
   "scripts": {
     "start": "react-scripts start",
