--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.1",
     "@types/react-loader-spinner": "^3.1.3",
     "@types/react-router-dom": "^5.1.7",
+    "@types/redux-logger": "^3.0.8",
     "axios": "^0.21.1",
     "immer": "^8.0.1",
     "msw": "^0.26.2",
@@ -25,6 +26,8 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.2.3",
     "use-react-router": "^1.0.7",
     "web-vitals": "^1.1.0"
